# ESysRepo

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  embold.yaml  sonar-project.properties
doc/: CMakeLists.txt  Doxyfile  doxy.bat  readme.msword2md.xml  readme.xml
doc/web/: config.toml
doc/web/content/: _index.md
doc/web/content/cli/: _index.md  help.md  info.md  init.md  list.md  manifest.md  status.md  sync.md  version.md
doc/web/content/development/: _index.md  ci.md  cidoc.md  clangtidydoc.md  codecoveragedoc.md  cppapidoc.md  valgrinddoc.md
doc/web/content/implementation/: _index.md
doc/web/content/installation/: _index.md  linux.md  macos.md  windows.md
doc/web/content/manifest/: _index.md  google.md  own.md
doc/web/content/overview/: _index.md
doc/web/content/requirements/: _index.md
doc/web/layouts/partials/: favicon.html  logo.html
doc/web/layouts/shortcodes/: image_src.html
res/: esysrepo.rc  esysrepo_t.rc  esysrepoexe.rc  pyesysrepo.rc
scripts/: bootstrap.sh  build_ci.sh  build_ci_merge.sh  build_webpage.sh  install_sonarcloud.sh  render.sh  run_clang_tidy.sh  run_code_coverage.sh  run_unittests.sh  start_ssh_agent  valgrind_unittests.sh
src/: CMakeLists.txt  pyesysrepo.py
src/esys/repo/: CMakeLists.txt  activate.bat  activate.sh  config.cpp  configfile.cpp  configfileimpl.cpp  configfileimpl.h  configfolder.cpp  deactivate.bat  deactivate.sh  errorinfo.cpp  errorstack.cpp  esysrepo_dll.cpp  esysrepo_prec.cpp  filesystem.cpp  gitbase.cpp  githelper.cpp  gitmngr.cpp  loadfolder.cpp  manifest.cpp  manifestfilebase.cpp  progresscallbackbase.cpp  result.cpp  resultcode.cpp  sshbase.cpp
src/esys/repo/cli/: app.cpp  appbase.cpp  cmd_cli.cpp  cmdenv_cli.cpp  cmdhelp_cli.cpp  cmdhelp_doc.cpp  cmdinfo_cli.cpp  cmdinfo_doc.cpp  cmdinit_cli.cpp  cmdinit_doc.cpp  cmdlist_cli.cpp  cmdlist_doc.cpp  cmdmanifest_cli.cpp  cmdmanifest_doc.cpp  cmdstatus_cli.cpp  cmdstatus_doc.cpp  cmdsync_cli.cpp  cmdsync_doc.cpp  cmdversion_cli.cpp  cmdversion_doc.cpp  usage_doc.cpp
src/esys/repo/cli/test/: app01.cpp  app02.cpp  appbase01.cpp  cmdhelp01_cli.cpp  cmdinfo01_cli.cpp  cmdinit01_cli.cpp  cmdlist01_cli.cpp  cmdmanifest01_cli.cpp  cmdstatus01_cli.cpp  cmdsync01_cli.cpp  cmdversion01_cli.cpp
src/esys/repo/exe/: cmd.cpp  cmdenv.cpp  cmdhelp.cpp  cmdinfo.cpp  cmdinit.cpp  cmdlist.cpp  cmdmanifest.cpp  cmdstatus.cpp  cmdsync.cpp  cmdversion.cpp
src/esys/repo/exe/test/: cmdinit01.cpp  cmdinit02.cpp  cmdmanifest01.cpp  cmdstatus01.cpp  cmdsync01.cpp  cmdsync02.cpp  cmdsync03.cpp  cmdsync04.cpp  cmdsync05.cpp  cmdsync06.cpp  cmdsync07.cpp  cmdsync08.cpp  esysbuildcmdsync01.cpp  esysbuildcmdsync02.cpp  esysmodbuscmdsync01.cpp  esysmodbuscmdsync02.cpp  fixcmd.cpp  fixcmdsync.cpp
src/esys/repo/git/: branch_git.cpp  branches_git.cpp  commit.cpp  commithash.cpp  diff_git.cpp  diffdelta_git.cpp  difffile_git.cpp  filestatus_git.cpp  progress_git.cpp  remote_git.cpp  repostatus_git.cpp  status_git.cpp  updatetip_git.cpp  url_git.cpp  walkcommit_git.cpp
src/esys/repo/git/test/: fixgit.cpp  sortbranches01.cpp  url01_git.cpp
src/esys/repo/gitcmdline/: git_cmdline.cpp
src/esys/repo/gitstats/: author.cpp  authormngr.cpp  basic.cpp  data.cpp  dataperiod.cpp  dataperiodauthor.cpp  datayear.cpp
src/esys/repo/gitstats/test/: basic01.cpp
src/esys/repo/grepo/: folder_grepo.cpp  manifest_grepo.cpp  manifestimpl.h  manifestimpl_grepo.cpp
src/esys/repo/grepo/test/: find_path_by_repo01_grepo.cpp  openfolder01_grepo.cpp  readmanifest01_grepo.cpp  readmanifest02_grepo.cpp  readmanifest03_grepo.cpp  writemanifest01_grepo.cpp
src/esys/repo/libgit2/: git_libgit2.cpp  gitimpl.h  gitimpl_libgit2.cpp  guard.h  guardassign.h  guardassign_libgit2.cpp  guardrelease.h  guardrelease_libgit2.cpp  guards.h  guardsrelease.h  guardsrelease_libgit2.cpp  libgit2.cpp  libgit2.h
src/esys/repo/libgit2/test/: clonerepo01_libgit2.cpp  clonerepo02_libgit2.cpp  getparentcommit01_libgit2.cpp  getstatus01_libgit2.cpp  isdirty01_libgit2.cpp  opengitrepo01_libgit2.cpp  sshagent01.cpp  walkcommits01_libgit2.cpp
src/esys/repo/libssh2/: ssh_libssh2.cpp  sshimpl.h  sshimpl_libssh2.cpp
src/esys/repo/manifest/: base_manifest.cpp  clonerepos_manifest.cpp  detect_manifest.cpp  fetch_manifest.cpp  fetchbase_manifest.cpp  fetchesysrepo_manifest.cpp  fetchgitsuper_manifest.cpp  fetchgrepo_manifest.cpp  file_manifest.cpp  filebase_manifest.cpp  fileerror_manifest.cpp  format_manifest.cpp  group_manifest.cpp  groups_manifest.cpp  include_manifest.cpp  kind_manifest.cpp  loader_manifest.cpp  loaderbase_manifest.cpp  loaderesysrepo_manifest.cpp  loadergitsuper_manifest.cpp  loadergrepo_manifest.cpp  location_manifest.cpp  repository_manifest.cpp  runtasks_manifest.cpp  sync_manifest.cpp  syncrepo_manifest.cpp  syncrepos_manifest.cpp  taskbase_manifest.cpp  type_manifest.cpp  workerthread_manifest.cpp  xmlfile.cpp  xmlfileimpl.h  xmlfileimpl_manifest.cpp
src/esys/repo/manifest/test/: detect01_manifest.cpp  globymatch01.cpp  task_t01_manifest.cpp  xmlfileread01_manifest.cpp  xmlfilewrite01_manifest.cpp
src/esys/repo/test/: CMakeLists.txt  configfilewrite01.cpp  configfoldercreate01.cpp  decodesideband01.cpp  esysrepo_t_prec.cpp  fscopynorecur01.cpp  loadfolder01.cpp  main.cpp  queuemt01.cpp  result01.cpp  resultcode01.cpp  sortbranches01.cpp  testcasectrl.cpp
src/esys/repo/win32/: cmdlineapp_win32.cpp
src/esysrepoexe/: CMakeLists.txt  esysrepoexe.cpp  esysrepoexe_prec.cpp  main.cpp
src/pyesysrepo/: esysrepo.hh  esysrepo.py  esysrepo_wrap.cxx  esysrepo_wrap.h  git.hh  gitbase.hh  githelper.hh  manifest.hh  progresscallbackbase.hh  pyesysrepo_dll.cpp  pyesysrepo_prec.cpp  pyversion.hh  version.hh
src/pyesysrepo/git/: branch.hh  branchtype.hh  commit.hh  commithash.hh  remote.hh
src/pyesysrepo/grepo/: manifest.hh
src/pyesysrepo/libgit2/: git.hh
src/pyesysrepo/manifest/: filebase.hh  fileerror.hh  format.hh  group.hh  location.hh  repository.hh  type.hh
src/tests/: __init__.py  test01.py  test_loadfolder01.py
(+151 files in other folders)
